2018-04-09 Lu Bai and Scott Bartell
  * DESCRIPTION (Version): New version is 1.1

  * R/summary.modgam.R: changed class check from "gam" to "Gam" to accomodate class
  name change from the gam library (starting with gam version 1.15).  

  * R/mypredict.gam.R: corrected error in dispersion parameter estimation for 
  quasibinomial and quasipoisson families.  Special thanks to Fabian Camacho,
  University of Virginia, for noticing the problem.   
  
  * R/colormap.R, R/plot.modgam.R: several modifications: new arugment allows
  users to specify any color palette, default palette for plot.modgam is changed to
  a divergent palette, new colormap help file example compares palettes, the color
  palette is now anchored on legend.add.line (if legend.add.line is specified),
  the color gradient now changes on an exponential (instead of linear) scale when 
  exp=T, help file now suggests readOGR instead of readShapePoly for importing 
  shapefiles, and formatting changed in the legend.     
  
  * added more S3 methods (coef(), formula(), summary(), AIC(), residuals())

  * copyright license information (GPL-3) added to all R code files

  * other minor changes and bug fixes

2016-06-19 Lu Bai
  * DESCRIPTION (Version): New version is 1.0
  
  * R/gamcox.R, R/print.gamcox.R, R/predict.gamcox.R: MAPGAM now includes functions
  to fit a Cox additive model for survival data by calling gamcox or specifying 
  family = "survival" in modgam. The model returned a object of class "gamcox", 
  which can be expressed by print and predict.
  
  * R/modgam.R: modgam now can fit both GAM and GAMCOX models. Added an option 
  "survival" for argument "family". Added "formula" argument(optional), which 
  allow for specifying the model using formula expression. Added "se.fit" argument
  to specify whether to compute pointwise standard errors and confidence intervals.
  Set a class for the returned object, "modgam".  The returned object has some