@@ -1,8 +1,8 @@
 Package: MapGAM
 Type: Package
 Title: Mapping Smoothed Effect Estimates from Individual-Level Data
-Version: 1.1
-Date: 2018-04-09
+Version: 1.2
+Date: 2018-07-24
 Author: Lu Bai, Scott Bartell, Robin Bliss, and Veronica Vieira
 Maintainer: Scott Bartell <sbartell@uci.edu>
 Description: Contains functions for mapping odds ratios, hazard ratios, or other effect estimates using individual-level data such as case-control study data, using generalized additive models (GAMs) or Cox models for smoothing with a two-dimensional predictor (e.g., geolocation or exposure to chemical mixtures) while adjusting linearly for confounding variables, using methods described by Kelsall and Diggle (1998), Webster at al. (2006), and Bai et al. (submitted).  Includes convenient functions for mapping point estimates and confidence intervals, efficient control sampling, and permutation tests for the null hypothesis that the two-dimensional predictor is not associated with the outcome variable (adjusting for confounders).     
@@ -11,6 +11,6 @@ Depends: R (>= 2.10.0), sp, gam, survival
 Imports: maptools, colorspace
 Suggests: maps, mapproj, PBSmapping
 NeedsCompilation: no
-Packaged: 2018-04-10 02:10:04 UTC; sbartell
+Packaged: 2018-07-25 04:20:48 UTC; sbartell
 Repository: CRAN
-Date/Publication: 2018-04-10 03:16:26 UTC
+Date/Publication: 2018-07-25 04:50:03 UTC
