@@ -1,11 +1,11 @@
-f64ab205fb708eb60248ab1e98259c9f *ChangeLog
-530aeccfa5b248ffd481f24b845a7260 *DESCRIPTION
+4b5b5b929a80d6954a08412d8b85479f *ChangeLog
+a3b686dbf2361f041c8bbbab18165eae *DESCRIPTION
 f0d0063866601480f079c21b26e63c0f *NAMESPACE
 9b8b73db80de16a79045de94643ff69f *R/AIC.modgam.R
-eb7792dd8468e19dc7f997d2c082b295 *R/MapGAM.version.R
+db5f816f08fc16bb39ebe3b7f4c79059 *R/MapGAM.version.R
 7e13153c8ae594307e74a815cd5b2fa1 *R/coef.gamcox.R
 d717b010fce5ea885b1d2998819fb1da *R/coef.modgam.R
-ee19d1c1731a51eaa871adb5d35bb182 *R/colormap.R
+146e12243dfad18030fdddf9e4f75b96 *R/colormap.R
 1d327194916e7aea258cb8acf47418d4 *R/dls.R
 603f276955210e3cdf075b434547618f *R/formula.gamcox.R
 68be2bb7e901b6ab4725fd6cd42366f7 *R/formula.modgam.R
@@ -39,12 +39,12 @@ a4d344358128e5298ef536d98d46e8cd *man/AIC.modgam.Rd
 0e5177b8cff84007eb9a1706ff005c47 *man/CAmap.Rd
 1fa4d47243e93703e36e4f85bc1a55d4 *man/MAdata.Rd
 e338a9c517a400613997ab8cc573bf53 *man/MAmap.Rd
-d477ee497eb6f1c1c274f54c04a9f2a5 *man/MapGAM-package.Rd
+c16b99b9560fc96a7b5d1f047964b927 *man/MapGAM-package.Rd
 80045605a66d70915515b9f5e05efd48 *man/MapGAM.version.Rd
 949469ecb32a1427b453dcdcc3adb8a8 *man/beertweets.Rd
 af76241aff722a9cec46578df8b49065 *man/coef.gamcox.Rd
 8b877b1c027603fb0bba37f36bed5057 *man/coef.modgam.Rd
-019904f3f1560bcaf3d71292b26ae34a *man/colormap.Rd
+a88b09f0cad230e38461793b1bffede9 *man/colormap.Rd
 c96e5eba6cffd43ac4daceae8f4b7057 *man/dls.Rd
 6b686065b46f543c65d8c9a4c0677c34 *man/formula.gamcox.Rd
 5dde1ba7bf597c367658fecf56ec4685 *man/formula.modgam.Rd
